--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,7 @@ web_modules/
 
 # dotenv environment variable files
 
-# .env
+.env
 # .env.development.local
 # .env.test.local
 # .env.production.local
@@ -175,6 +175,10 @@ dist
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# deploy
 .vercel
 .netlify
-guide.txt
+
+# my
+src/css
