--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,13 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@pages/*": ["/src/pages/*"],
+      "@components/*": ["src/components/*"],
+      "@handlers/*": ["src/handlers/*"],
+      "@querys/*": ["src/querys/*"],
+      "@build/*": ["src/build/*"],
+      "@types/*": ["src/build/types*"]
     }
   },
   "ts-node": {
@@ -19,5 +25,5 @@
       "module": "commonjs"
     }
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"]
+  "include": ["src/**/*"]
 }
